--- a/index.html
+++ b/index.html
@@ -1,85 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to Hubeilaocast Podcasts - HubeiLaoCast</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    a {
-      color: #0366d6;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    h1, h2, h3, h4, h5, h6 {
-      margin-top: 24px;
-      margin-bottom: 16px;
-      font-weight: 600;
-      line-height: 1.25;
-    }
-    h1 {
-      font-size: 2em;
-      border-bottom: 1px solid #eaecef;
-      padding-bottom: 0.3em;
-    }
-    h2 {
-      font-size: 1.5em;
-      border-bottom: 1px solid #eaecef;
-      padding-bottom: 0.3em;
-    }
-    img {
-      max-width: 100%;
-    }
-    code {
-      font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
-      background-color: rgba(27, 31, 35, 0.05);
-      padding: 0.2em 0.4em;
-      border-radius: 3px;
-    }
-    pre {
-      background-color: #f6f8fa;
-      border-radius: 3px;
-      padding: 16px;
-      overflow: auto;
-    }
-    pre code {
-      background-color: transparent;
-      padding: 0;
-    }
-    blockquote {
-      margin: 0;
-      padding: 0 1em;
-      color: #6a737d;
-      border-left: 0.25em solid #dfe2e5;
-    }
-    hr {
-      height: 0.25em;
-      padding: 0;
-      margin: 24px 0;
-      background-color: #e1e4e8;
-      border: 0;
-    }
-    .site-header {
-      margin-bottom: 20px;
-    }
-    .site-footer {
-      margin-top: 40px;
-      padding-top: 20px;
-      border-top: 1px solid #eaecef;
-      color: #6a737d;
-      font-size: 0.9em;
-    }
-  </style>
+
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
+
 <body>
   <header class="site-header">
     <h1><a href="/">HubeiLaoCast</a></h1>
@@ -87,6 +16,8 @@
 
   <main>
     <h1 id="welcome-to-hubeilaocast-podcasts-️">Welcome to Hubeilaocast Podcasts 🎙️</h1>
+
+<p>📖 <strong><a href="/README_cn/">简体中文</a> version available.</strong></p>
 
 <p>Hello and welcome!</p>
 
@@ -109,7 +40,6 @@
     <ul>
       <li><a href="/cptsd-healing/Anki-cards/">Study Guide: Anki Cards</a> - Flashcards for studying key concepts</li>
       <li><a href="/cptsd-healing/FAQs/">Frequently Asked Questions (FAQs)</a> - Answers to common questions about CPTSD healing</li>
-      <li><a href="/cptsd-healing/Self-Help_Healing_for_Asperger's_Syndrome_&amp;_Complex_PTSD___From_the_Perspective_of_Somatic_Experience/">Self-Help Healing for Asperger’s Syndrome &amp; Complex PTSD _ From the Perspective of Somatic Experience</a> - Original works of <strong>光瞳</strong> in Chinese</li>
     </ul>
   </li>
 </ul>
@@ -121,17 +51,6 @@
 <p><strong>RSS Feed Link:</strong></p>
 
 <p>https://hubeilaocast.github.io/cptsd-healing-en.xml</p>
-
-<hr />
-
-<h3 id="2-大野人">2. 大野人</h3>
-
-<p>This is a planned future podcast in Mandarin Chinese, created to share thoughts, stories, and interesting content with my family in mainland China.</p>
-
-<ul>
-  <li><strong>Language:</strong> Mandarin Chinese</li>
-  <li><strong>Status:</strong> Coming Soon!</li>
-</ul>
 
 <hr />
 
@@ -149,4 +68,31 @@
     <p>&copy; 2025 HubeiLaoCast. All rights reserved.</p>
   </footer>
 </body>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    // Change this ID to match your generated TOC
+    const toc = document.getElementById('markdown-toc');
+
+    if (!toc) {
+      return;
+    }
+
+    const itemsWithChildren = toc.querySelectorAll('li');
+
+    itemsWithChildren.forEach(item => {
+      const nestedList = item.querySelector('ul');
+      if (nestedList) {
+        item.classList.add('has-nested');
+
+        const link = item.querySelector('a');
+
+        link.addEventListener('click', function (event) {
+          event.preventDefault();
+          item.classList.toggle('open');
+        });
+      }
+    });
+  });
+</script>
+
 </html>
